--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -16,9 +16,12 @@ jobs:
     - uses: actions/checkout@v4
     - name: Use Node.js 20
       uses: actions/setup-node@v4
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+    - name: Install dependencies now
+      run: npm install
+    # - run: npm ci
+    # - run: npm run build --if-present
+    - name: Run test hello
+      run: npm test
 
 
 
