--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -13,16 +13,40 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - uses: actions/checkout@v4
-    - name: Use Node.js 20
-      uses: actions/setup-node@v4
+
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    # - name: Use Node.js 20
+    #   uses: actions/setup-node@v4
+
     - name: Install dependencies now
       run: npm install
+      
     # - run: npm ci
     # - run: npm run build --if-present
+    
     - name: Run test hello
       run: npm test
 
+  # deploy:
+  #   needs: build
+
+  #   runs-on: ubuntu-latest
+  #   if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+
+  #   steps:
+
+  #   - uses: actions/checkout@v4
+
+  #   - name: Use Node.js 20
+  #     uses: actions/setup-node@v4
+
+  #   - name: Install dependencies now
+  #     run: npm install
+
+  #   - name: Deploy application
+  #     run: echo "Deploying application..."
 
 
 
