--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -6,6 +6,8 @@ on:
   pull_request:
     branches: [ "main" ]
   workflow_dispatch:
+  # schedule:
+  #   - cron: '*/30 * * * *'
 
 jobs:
   build:
@@ -16,6 +18,7 @@ jobs:
 
     - name: Checkout repository
       uses: actions/checkout@v4
+      # run: git clone https://github.com/your-username/your-repo.git
 
     # - name: Use Node.js 20
     #   uses: actions/setup-node@v4
